# simulator2d

./: Cargo.toml  README.md  build.rs
src/: cv.rs  main.rs  mesh.rs  render.rs  window.rs
src/sim/: cauchy_fvm.rs
src/sim_core/: cauchy_fem.rs  cauchy_fvm.rs  cauchy_fvm_seq.rs  cv.rs  mesh.rs  mod.rs
