[package]
name = "simulator"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
rayon = "1.10.0"
lazy_static = "1.5.0"
bevy = { version = "0.16.0", features = ["dynamic_linking"] }

# For x86_64 Linux
[target.'cfg(target_os = "linux")'.dependencies]
ndarray = "0.16.1"
ndarray-linalg = { version = "0.16", features = ["openblas-static"] }
openblas-src = { version = "0.10.12", features = ["static"] }

# For x86_64 Windows
[target.'cfg(target_os = "windows")'.dependencies]
ndarray-linalg = { version = "0.16", features = ["intel-mkl"] }
ndarray = "0.16.1"

# For aarch64 MacOS
[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
ndarray = {version = "0.15", features=["rayon", "serde","blas"]}
ndarray-linalg = { version = "0.16", default-features = false }
blas-src = { version = "0.14", features = ["accelerate"] }

# temporary optimization level for faster compile times
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
